--- a/MMI.bib
+++ b/MMI.bib
@@ -48,8 +48,10 @@ year = {2015}
 @article{Kokoris-kogias,
 author = {Kokoris-kogias, Eleftherios and Gasser, Linus and Khoffi, Ismail and Jovanovic, Philipp and Gailly, Nicolas and Ford, Bryan},
 file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Kokoris-kogias et al. - Unknown - Managing Identities Using Blockchains and CoSi.pdf:pdf},
-title = {{Managing Identities Using Blockchains and CoSi}}
+title = {{Managing Identities Using Blockchains and CoSi}},
+year={2016}
 }
+
 @article{Atwater2016,
 abstract = {The average computer user is no longer restricted to one device. They may have several devices and expect their applications to work on all of them. A challenge arises when these applications need the cryptographic private key of the devices' owner. ...},
 author = {Atwater, Erinn and Hengartner, Urs},
@@ -113,4 +115,29 @@ file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Syta
 mendeley-groups = {MMI References},
 title = {{Keeping Authorities " Honest or Bust " with Decentralized Witness Cosigning}},
 url = {http://dedis.cs.yale.edu/dissent/papers/witness.pdf}
+}
+@article{Damgard2000,
+abstract = {Telephone: +45 8942 3360 Telefax: +45 8942 3255 Internet: BRICS@brics.dk BRICS publications are in general accessible through the World Wide Web and anonymous FTP through these URLs: Abstract. We propose a generalisation of Paillier's probabilistic public key system, in which the expansion factor is reduced and which allows to adjust the block length of the scheme even after the public key has been fixed, without loosing the homomorphic property. We show that the generalisation is as secure as Paillier's original system. We construct a threshold variant of the generalised scheme as well as zero-knowledge protocols to show that a given ciphertext encrypts one of a set of given plaintexts, and protocols to verify multiplicative relations on plaintexts. We then show how these building blocks can be used for applying the scheme to efficient electronic voting. This reduces dramatically the work needed to compute the final result of an election, compared to the previ-ously best known schemes. We show how the basic scheme for a yes/no vote can be easily adapted to casting a vote for up to t out of L can-didates. The same basic building blocks can also be adapted to pro-vide receipt-free elections, under appropriate physical assumptions. The scheme for 1 out of L elections can be optimised such that for a certain range of parameter values, a ballot has size only O(log L) bits.},
+author = {Damg{\aa}rd, Ivan B and Jurik, Mads J and Damg{\aa}rd, Ivan and Jurik, Mads},
+file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Damg{\aa}rd et al. - 2000 - A Generalisation, a Simplification and some Applications of Paillier's Probabilistic Public-Key System.pdf:pdf},
+issn = {0909-0878},
+mendeley-groups = {MMI References},
+title = {{A Generalisation, a Simplification and some Applications of Paillier's Probabilistic Public-Key System}},
+url = {http://www.brics.dk},
+year = {2000}
+}
+@article{Gennaro,
+abstract = {While threshold signature schemes have been presented be-fore, there has never been an optimal threshold signature algorithm for DSA. Due to the properties of DSA, it is far more difficult to create a threshold scheme for it than for other signature algorithms. In this pa-per, we present a breakthrough scheme that provides a threshold DSA algorithm that is efficient and optimal. We also present a compelling ap-plication to use our scheme: securing Bitcoin wallets. Bitcoin thefts are on the rise, and threshold DSA is necessary to secure Bitcoin wallets. Our scheme is the first general threshold DSA scheme that does not require an honest majority and is useful for securing Bitcoin wallets.},
+author = {Gennaro, Rosario and Goldfeder, Steven and Narayanan, Arvind},
+file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Gennaro, Goldfeder, Narayanan - Unknown - Threshold-optimal DSAECDSA signatures and an application to Bitcoin wallet security.pdf:pdf},
+mendeley-groups = {MMI References},
+title = {{Threshold-optimal DSA/ECDSA signatures and an application to Bitcoin wallet security}},
+url = {https://eprint.iacr.org/2016/013.pdf}
+}
+@article{Whitten,
+author = {Whitten, Alma and Tygar, J. D.},
+file = {},
+journal={8th USENIX Security Symposium, SSYM'99, pages 14-14, Berkeley, CA, USA},
+year={1999},
+title = {{Why Johnny Can't Encrypt: A Usability Evaluation of PGP 5.0}}
 }
