--- a/Managing multiple Identities.tex
+++ b/Managing multiple Identities.tex
@@ -10,6 +10,7 @@
 \usepackage{bbding}
 \usepackage{xifthen}
 
+
 %==========================MACROS==============================
 %margin comments
 \setlength{\marginparsep}{6pt}
@@ -51,8 +52,8 @@ says: \raggedright{#2}}}}
 %========================LET"S BEGIN!==============================
 
 \begin{document}
-\title{Helping Johnny to Manage His Keys}
-\subtitle{Approaches to Managing Multiple Identities and Devices for Single Users}
+\title{Helping Johnny Manage His Keys}
+\subtitle{Approaches to Managing Multiple Devices and Identities for Single Users}
 
 
 \author{Mark MacIntyre Wheatley}
@@ -68,7 +69,7 @@ says: \raggedright{#2}}}}
 \begin{abstract}
 
 In today's day and age, the average computer user finds at their disposal a plethora of computing devices of various sizes, form factors and computing power, targeted at different aspects of the user's lifestyle. Indeed, it is not uncommon to find the average user in possession of at least two devices, namely, a computer and a smartphone. Additionally, we find new devices being released everyday: smart accessories, smart appliances and the ilk. The average user expects all their applications to work seamlessly across their devices. A challenge in security arises when the user needs to manage their multiple interconnected devices and their multiple identities for their applications.
-This paper aims to provide an overview of developments in approaches to managing multiple devices and identites for single users. \mn{[list of names and some findings]}
+This paper aims to provide an overview of developments in approaches to managing multiple devices and identites for single users. We look at the various solution classes to the multi-device problem and then delve deeper to take a look at four solutions.
 
 \end{abstract}
 
