--- a/MMI-body.tex
+++ b/MMI-body.tex
@@ -167,7 +167,7 @@ The following is an overview of the various components of Shatter:
 
 \begin{enumerate}[label=\arabic*., wide, labelwidth=!, labelindent=0pt]
 	\item \textbf{Cryptographic Algorithms:} Shatter has implementations of two threshold algorithms. The first is a $(t,n)$-Threshold-DSA 						signature 	scheme proposed by Gennaro et al. \cite{Gennaro}. This was chosen as it provides the authentication in most OTR (Off-The-Record) 			protocol implementations for which the authors later intend to add threshold cryptography support. The second threshold algorithm 							implemented is the Damgaard-Jurik (t,n)-threshold version of Paillier's additively homomorphic encryption algorithm \cite{Damgard2000}. 					This was chosen because it 	provides the properties required of the encryption algorithm used as a component of the aforementioned signature 			algorithm.
-	\item \textbf{libShatter:} This the library that provides the actual implementations of the cryptography protocols as well as classes to aid 					network connections between clients. It is written in Java (targeting versions 1.7+) ensuring that is easily portable to all major desktop and 				laptop computer platforms. It also compiles to an Android app library so it can be used in Android apps. libShatter consists of the following four 			major components:
+	\item \textbf{libShatter:} This is the library that provides the actual implementations of the cryptography protocols as well as classes to aid 					network connections between clients. It is written in Java (targeting versions 1.7+) ensuring that is easily portable to all major desktop and 				laptop computer platforms. It also compiles to an Android app library so it can be used in Android apps. libShatter consists of the following four 			major components:
 	\begin{itemize}
 		\item \textbf{ThresholdAgent:} This is a daemon that performs the core cryptography operations as well as device management. The 							NetworkAgent (described below) delegates the work of managing network connections, incoming packets and any received or pending 						requests to this daemon.
 		\item \textbf{NetworkAgent:} This daemon manages the connections to all the user's other devices. It is also responsible for managing all the 		network communication that takes place between them.
